added organisation related data

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 	<div id="menu">
 		<ul>
 			<li class="current_page_item"><a href="#">Home</a></li>
-			<li><a href="#">Organization</a></li>
-			<li><a href="#">Members</a></li>
-			<li><a href="#">Activities</a></li>
-			<li><a href="#">Resources</a></li>
-			<li><a href="#">News</a> </li>
+			<li><a href="organization.html">Organization</a></li>
+			<li><a href="members.html">Members</a></li>
+			<li><a href="activities.html">Activities</a></li>
+			<li><a href="resources.html">Resources</a></li>
+			<li><a href="news.html">News</a> </li>
+			<li><a href="seminars.html">IAGRG Seminars</a> </li>
 			<li class="last"><a href="#">Contact</a></li>
 		</ul>
 	</div>
