--- a/organization.html
+++ b/organization.html
@@ -58,7 +58,7 @@
 				</p>
 				<h2> Some of the Resolutions </h2>
 				<p>
-					Here are a few important resolutions regarding membership.
+					Here are a few important <a href="organization_resolutions.html#Resolutions" > resolutions </a> regarding membership.
 				</p>
 				
 			</div>
