--- a/members.html
+++ b/members.html
@@ -73,7 +73,7 @@
 			
 			<div id="col2">
 				
-				<p><a href="members_current.html#Current" class="link-style" >List of current members</a></p>
+				<p><a href="members_current.html" class="link-style" >List of current members</a></p>
 				<br>
 				<p><a href="members_apply.html#Apply" class="link-style" >Apply online</a></p>
 				
