--- a/index.html
+++ b/index.html
@@ -85,16 +85,18 @@
 			</div>
 			
 			<div id="column2">
-				<h2>Some hilights</h2>
+				<h2>Highlight</h2>
 					<p>
 					In 2001, during the 21st IAGRG General Body Meeting, it was proposed that the council should initiate efforts to set-up an IAGRG web-site. Thanks to the efforts of Ajit Kembhavi and his team, this was achieved by December 2002. 
 				</p>
 
 			</div>
 			<div id="column3">
-				<h2>Info can be added</h2>
+				<h2>News</h2>
 				<p>
-					 Thus was born the IAGRG web-site at http://meghnad.iucaa.ernet.in/~iagrg. A need was felt to update the site enhancing its scope and the present site is the outcome of the on-going effort.
+					VR Endowment Award Lecture 2022: Prof. Archana Pai, IIT Bombay
+					<br>
+					VR Endowment Award Lecture 2023: Prof. Varun Sahni, IUCAA, Pune
 				</p>
 				
 			</div>
