Content on working group on gender is addeded and necessary changes to support this new addition

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="members.html">Members</a></li>
 			<li><a href="activities.html">Activities</a></li>
 			<li><a href="resources.html">Resources</a></li>
+			<li><a href="wg_on_gender.html">Working Group on Gender</a> </li>
 			<li><a href="news.html">News</a> </li>
 			<li><a href="seminars.html">IAGRG Seminars</a> </li>
 			<li class="last"><a href="#">Contact</a></li>
@@ -57,10 +58,16 @@
 			
 			<div id="col2">
 				<h2>Latest News</h2>
-				<p><a href="https://sites.google.com/iitgn.ac.in/iagrgschool2022" class="link-style" >IAGRG School 2022</a></p>
+				<p><a href="wg_on_gender.html" class="link-style" >Working Group on Gender </a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-					<h3> <strong>The first IAGRG School on Gravitation and Cosmology</strong></h3>
-					IAGRG is glad to announce the first of its Schools on topics related to Gravitation. The first IAGRG School on Gravitation and Cosmology will be held online during May 16-28, 2022. This School aims to train students and young researchers in the emerging areas of Gravitation and Cosmology. The series is mainly intended for graduate students working (or starting to work) on gravitational physics, cosmology, and related areas. For more details and registration, please visit the program <a href="https://sites.google.com/iitgn.ac.in/iagrgschool2022">website: IAGRG School 2022</a>. Note that the last date for registration for the School is April 10, 2022.
+					<h3> <strong>IAGRG forms Working Group on Gender</strong></h3>
+					Harvinder Singh(Chair) <br>
+					Archana Pai <br>
+					Pravabati Chingangbam <br>
+					Raghu Rangarajan <br>
+					Parameswaran Ajith <br>
+					Sumati Surya(Ex officio ) <br>
+					Anjan Ananda Sen(Ex officio) <br>
 				</marquee>
 				<p><a href="" class="link-style" >New office bearers of IAGRG</a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
