--- a/news.html
+++ b/news.html
@@ -24,7 +24,8 @@
 			<li><a href="members.html">Members</a></li>
 			<li><a href="activities.html">Activities</a></li>
 			<li><a href="resources.html">Resources</a></li>
-			<li class="current_page_item"><a href="#">News</a> </li>
+			<li><a href="wg_on_gender.html">Working Group on Gender</a> </li>
+			<li class="current_page_item" ><a href="#">News</a> </li>
 			<li><a href="seminars.html">IAGRG Seminars</a> </li>
 			<li class="last"><a href="#">Contact</a></li>
 		</ul>
