--- a/organization_constitution.html
+++ b/organization_constitution.html
@@ -20,10 +20,11 @@
 	<div id="menu">
 		<ul>
 			<li ><a href="index.html">Home</a></li>
-			<li class="current_page_item"><a href="organization.html">Organization</a></li>
+			<li class="current_page_item"><a href="#">Organization</a></li>
 			<li><a href="members.html">Members</a></li>
 			<li><a href="activities.html">Activities</a></li>
 			<li><a href="resources.html">Resources</a></li>
+			<li><a href="wg_on_gender.html">Working Group on Gender</a> </li>
 			<li><a href="news.html">News</a> </li>
 			<li><a href="seminars.html">IAGRG Seminars</a> </li>
 			<li class="last"><a href="#">Contact</a></li>
