--- a/resources.html
+++ b/resources.html
@@ -24,6 +24,7 @@
 			<li><a href="members.html">Members</a></li>
 			<li><a href="activities.html">Activities</a></li>
 			<li class="current_page_item"><a href="#">Resources</a></li>
+			<li><a href="wg_on_gender.html">Working Group on Gender</a> </li>
 			<li><a href="news.html">News</a> </li>
 			<li><a href="seminars.html">IAGRG Seminars</a> </li>
 			<li class="last"><a href="#">Contact</a></li>
