--- a/seminars.html
+++ b/seminars.html
@@ -24,9 +24,10 @@
 			<li><a href="members.html">Members</a></li>
 			<li><a href="activities.html">Activities</a></li>
 			<li><a href="resources.html">Resources</a></li>
+			<li><a href="wg_on_gender.html">Working Group on Gender</a> </li>
 			<li><a href="news.html">News</a> </li>
-			<li class="current_page_item" ><a href="#">IAGRG Seminars</a> </li>
-			<li class="last"><a href="">Contact</a></li>
+			<li class="current_page_item"><a href="#">IAGRG Seminars</a> </li>
+			<li class="last"><a href="#">Contact</a></li>
 		</ul>
 	</div>
 	<div id="banner"><img src="images/header-image-bg.png" width="1100" height="450" alt="" /></div>
