ICGC-23 and IAGRG summer school

--- a/index.html
+++ b/index.html
@@ -69,13 +69,19 @@
 					Sumati Surya(Ex officio ) <br>
 					Anjan Ananda Sen(Ex officio) <br>
 				</marquee>
-				<p><a href="" class="link-style" >New office bearers of IAGRG</a></p>
+				<p><a href="https://www.icts.res.in/program/IAGRG" class="link-style" >The Second IAGRG School on Gravitation and Cosmology</a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-					<strong>IAGRG has elected its new office bearers</strong>. The new office bearers are: Sumati Surya (President), Anjan Ananda Sen (Secretary), and Sudipta Sarkar, K. G. Arun and Atri Deshamukhya (Members of the Council). Note that S. Shankaranarayanan, Rajesh Nayak and Ayan Chatterjee will continue to serve as Members of the Council. Also, Patrick Das Gupta will continue as an Ex-Officio Member on the Council. Please note that the new office bearers will take office on March 14, 2022. On the same date, Sukanta Bose, Suneeta Vardarajan and Somasri Sen will retire as Members of the Council, Sayan Kar will retire as an Ex-Officio Member, and L. Sriramkumar will retire as the Secretary.
+					<strong>The Second IAGRG School on Gravitation and Cosmology </strong> <br>will be held at ICTS, Bangalore during 9th-20th October 2023. This year the school will take place in Offline mode.
+						The webpage for the school is:<br>
+						https://www.icts.res.in/program/IAGRG <br>
+						Kindly encourage Phd students and Postdoctoral Fellows who are interested, to apply.
 				</marquee>	
-				<p><a href="https://physics.iitm.ac.in/~iagrg/" class="link-style" >The next IAGRG meeting</a> </p>
+				<p><a href="" class="link-style" >The ICGC-2023  meeting</a> </p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-				<strong>The 32nd IAGRG Meeting</strong> will be held at the Indian Institute of Science Education and Research, Kolkata, during December 19-21, 2022. The web-page for the meeting is located at the link:<a href="https://physics.iitm.ac.in/~iagrg/" >IAGRG-32</a>.
+					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
+						The SOC-Chair for this year's ICGC is Prof. Archana Pai. <br>
+						The LOC-Chair is Dr. Santabrata Das. <br>
+						The webpage and other details for the workshop will be announced shortly. Kindly mark your calendar for these dates. 
 				</marquee>
 			</div>
 			
