--- a/wg_on_gender.html
+++ b/wg_on_gender.html
@@ -36,6 +36,9 @@
 			<div id="col1">
 				<h2>IAGRG - Working Group on Gender </h2>
 				<p>
+					The IAGRG is proud to announce our first Working Group on Gender (WGG-IAGRG)  for Women’s Day 2023. The aim of this group  is to guide our community  towards a more equitable,  gender sensitive and inclusive environment. <br>
+					
+					We welcome our first   2023-24  WGG-IAGRG  committee members: <br>
 				The commitee : <br>
 					Harvinder Singh (Chair)<br>
 					Archana Pai <br>
