bg image is added to wgg

--- a/wg_on_gender.html
+++ b/wg_on_gender.html
@@ -30,7 +30,7 @@
 			<li class="last"><a href="#">Contact</a></li>
 		</ul>
 	</div>
-	<div id="banner"><img src="images/header-image-bg.png" width="1100" height="450" alt="" /></div>
+	<div id="banner"><img src="images/gwg.png" alt="" /></div>
 	<div id="two-columns">
 		<div class="content">
 			<div id="col1">
