forms are not uploaded ?

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<p><a href="wg_on_gender.html" class="link-style" >Working Group on Gender </a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<h3> <strong>IAGRG forms Working Group on Gender</strong></h3>
-					Harvinder Singh(Chair) <br>
+					Harvinder Kaur Jassal(Chair) <br>
 					Archana Pai <br>
 					Pravabati Chingangbam <br>
 					Raghu Rangarajan <br>
