--- a/wg_on_gender.html
+++ b/wg_on_gender.html
@@ -38,7 +38,7 @@
 				<p>
 					The IAGRG is proud to announce our first Working Group on Gender (WGG-IAGRG)  on  Women’s Day 2023. The aim of this group is to guide our community towards a more equitable, gender sensitive and inclusive environment.<br>
 					We welcome our first 2023-24 WGG-IAGRG committee members: <br>
-					Harvinder Singh (Chair) <br>
+					Harvinder Kaur Jassal(Chair) <br>
 					Archana Pai <br>
 					Pravabati Chingangbam <br>
 					Raghu Rangarajan <br>
