--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 			
 			<div id="col2">
 				<h2>Latest News</h2>
+				<p>
+				<p><a href="https://indico.cern.ch/event/1268737/" class="link-style" >The ICGC-2023  meeting</a> </p>
+				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
+					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
+					The Registration is now open <br>
+					<a href="https://indico.cern.ch/event/1268737/">ICGC-2023 web-page </a> <br>
+					The SOC-Chair for this year's ICGC is Prof. Archana Pai. <br>
+					The LOC-Chair is Dr. Santabrata Das. <br>
+					The webpage and other details for the workshop will be announced shortly. Kindly mark your calendar for these dates. 
+				</marquee>
 				<p><a href="wg_on_gender.html" class="link-style" >Working Group on Gender </a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<h3> <strong>IAGRG forms Working Group on Gender</strong></h3>
@@ -76,13 +86,7 @@
 						https://www.icts.res.in/program/IAGRG <br>
 						Kindly encourage Phd students and Postdoctoral Fellows who are interested, to apply.
 				</marquee>	
-				<p><a href="" class="link-style" >The ICGC-2023  meeting</a> </p>
-				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
-						The SOC-Chair for this year's ICGC is Prof. Archana Pai. <br>
-						The LOC-Chair is Dr. Santabrata Das. <br>
-						The webpage and other details for the workshop will be announced shortly. Kindly mark your calendar for these dates. 
-				</marquee>
+				
 			</div>
 			
 		</div>
