--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
 					The Registration is now open <br>
-					<a href="https://indico.cern.ch/event/1268737/">ICGC-2023 web-page </a> <br>
+					<a href="https://indico.cern.ch/event/1268737/">ICGC-2023 web-page for details</a> <br>
 					The SOC-Chair for this year's ICGC is Prof. Archana Pai. <br>
 					The LOC-Chair is Dr. Santabrata Das. <br>
-					The webpage and other details for the workshop will be announced shortly. Kindly mark your calendar for these dates. 
+					
 				</marquee>
 				<p><a href="wg_on_gender.html" class="link-style" >Working Group on Gender </a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
