VR lecture 2023 details added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 			<div id="col2">
 				<h2>Latest News</h2>
 				<p>
+				<p><a href="https://www.ashoka.edu.in/event/vaidyaraychaudhuri-endowment-award-lecture-2023/" class="link-style" >Vaidya-Raychaudhuri Endowment Award Lecture 2023</a> </p>
+					<marquee width="90%" direction="up" scrollamount="2" height="120px" >
+						<strong>The  Vaidya-Raychaudhuri Endowment Award Lecture 2023</strong><br> will be given by Prof. Varun Sahni at Ashoka University on 26th the October 2023 <br>
+						 <br>
+						<a href="https://www.ashoka.edu.in/event/vaidyaraychaudhuri-endowment-award-lecture-2023/">For Details see web page and Registraction </a> <br>
+					</marquee>
 				<p><a href="https://indico.cern.ch/event/1268737/" class="link-style" >The ICGC-2023  meeting</a> </p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
