--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="wrapper">
 	<div id="header">
-		<img src="images/iagrg.png" width="100" height="100" alt="" />
+		<img src="images/iagrg.png" style="object-fit: none; object-position: 64px 8px; width: 100px; height: 100px"  />
 		<div id="logo">
 			<h1><a href="#">Indian Association for General Relativity and Gravitation</a></h1>
 		</div>
@@ -59,21 +59,30 @@
 			<div id="col2">
 				<h2>Latest News</h2>
 				<p>
-				<p><a href="https://www.ashoka.edu.in/event/vaidyaraychaudhuri-endowment-award-lecture-2023/" class="link-style" >Vaidya-Raychaudhuri Endowment Award Lecture 2023</a> </p>
+				<p><a href="https://sites.google.com/view/predictability-gr/home?authuser=0" class="link-style" >Predictability in General Relativity</a> </p>
 					<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-						<strong>The  Vaidya-Raychaudhuri Endowment Award Lecture 2023</strong><br> will be given by Prof. Varun Sahni at Ashoka University on 26th the October 2023 <br>
-						 <br>
-						<a href="https://www.ashoka.edu.in/event/vaidyaraychaudhuri-endowment-award-lecture-2023/">For Details see web page and Registraction </a> <br>
+						<strong>"Predictability in General Relativity: celebrating the contributions of Prof. Yvonne Choquet-Bruhat"  </strong> <br>On the 28th of Feb 2024 <br> ONLINE conference <br> Hosted jointly by the Raman Research Institute and<br> the International Center for Theoretical Sciences, under the aegis of the IAGRG   <br>
+						<a href="https://sites.google.com/view/predictability-gr/home?authuser=0">For Details see the website </a> <br>
+							The  list  of confirmed speakers is: 
+							<br>
+							Abhay Ashtekar (Penn State University)
+							<br>
+							Badri Krishnan (Radboud University)
+							<br>
+							Cécile Huneau (École Polytechnique)
+							<br>
+							Elena Giorgi (Columbia University)
+							<br>
+							Juan A. Valiente Kroon (Queen Mary University of London)
+							<br>
+							Lydia Bieri (University of Michigan)
+							<br>
+							Mihalis Dafermos (University of Cambridge & Princeton University)
+							<br>
+							Thomas Baumgarte (Bowdoin College)<br>
+							<a href="https://sites.google.com/view/predictability-gr/registration?authuser=0">For Registration click here </a> <br>
 					</marquee>
-				<p><a href="https://indico.cern.ch/event/1268737/" class="link-style" >The ICGC-2023  meeting</a> </p>
-				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
-					<strong>The ICGC-2023 </strong><br> will take place at IIT Guwahati during 6-9th December 2023. <br>
-					The Registration is now open <br>
-					<a href="https://indico.cern.ch/event/1268737/">ICGC-2023 web-page for details</a> <br>
-					The SOC-Chair for this year's ICGC is Prof. Archana Pai. <br>
-					The LOC-Chair is Dr. Santabrata Das. <br>
-					
-				</marquee>
+				
 				<p><a href="wg_on_gender.html" class="link-style" >Working Group on Gender </a></p>
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<h3> <strong>IAGRG forms Working Group on Gender</strong></h3>
