Council member updated, IAGRG 33 and 3rd IAGRG school

--- a/organization.html
+++ b/organization.html
@@ -69,14 +69,15 @@
 				<marquee width="90%" direction="up" scrollamount="2" height="120px" >
 					<h3> <strong>Office bearers of IAGRG</strong></h3>
 					<ul>
-						<li>Sumati Surya (President) </li>
+						<li>L. Sriramkumar (President) </li>
 						<li>Anjan Ananda Sen (Secretary) </li>
 						<li> Sudipta Sarkar </li>
 						<li> K. G. Arun </li> 
 						<li> Atri Deshamukhya</li>
-						<li>S. Shankaranarayanan</li>
-						<li>Rajesh Nayak </li>
-						<li>Ayan Chatterjee</li>
+						<li>Koushik Dutta</li>
+						<li>Aseem Paranjape</li>
+						<li>Harvinder Kaur jassal</li>
+						<li> Sumati Surya(Ex officio )</li>
 					</ul>
 				</marquee>
 				
