--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="wrapper">
 	<div id="header">
-		<img src="images/iagrg.png" style="object-fit: none; object-position: 64px 8px; width: 100px; height: 100px"  />
+		<img src="images/iagrg.png" style="object-fit: none;  width: 100px; height: 100px"  />
 		<div id="logo">
 			<h1><a href="#">Indian Association for General Relativity and Gravitation</a></h1>
 		</div>
