VR lecture details uploaded

--- a/activities.html
+++ b/activities.html
@@ -100,8 +100,11 @@
 			<div id="col2">
 				
 				<p><a href="#IAGRG" class="link-style" >IAGRG Meetings</a>
-				<br> </p>
-				<p>
+				<br> 
+				
+			</p>
+		
+			<p>
 					<a href="#ICGC" class="link-style" >ICGC Meetings</a> 
 					<br>
 				</p>
@@ -147,16 +150,37 @@
 		</p>
 		<p>
 			The archival information is available here:<a href='iagrg_meeting_archives.html'> Archives of IAGRG Meetings</a>.
+			<hr>
 		</p>
 	<h2 id="ICGC">ICGC Meetings</h2>
+		<p>
+			<hr>
+		</p>
 	<h2 id="OtherMeetings">Meetings/Workshops/Schools</h2>
-		<h2 id="VaidyaRaychaudhuriLectures">Vaidya
+		<p>
+			<hr>
+		</p>
+	<h2 id="VaidyaRaychaudhuriLectures">Vaidya
 			Raychaudhuri Endowment Award Lectures</h2>
-		<h2 id="BestTheses"> V V Narlikar Best Thesis
+		<p>
+			One of the events at the IAGRG meeting is the Vaidya Raychaudhuri Endowment Award Lecture. This event was instituted as a tribute to the two doyens of Indian relativists, P. C. Vaidya and A. K. Raychaudhuri. The award is given in recognition of the contributions made both in research and teaching of General Relativity and its applications to astrophysics and cosmology. The awardee is invited to deliver the Vaidya-Raychaudhuri Endowment Award Lecture at the IAGRG meeting. The lecture is generally meant to be accessible to the wider general relativity audience.
+		</p><p>
+			Since the 26th IAGRG Meeting in 2011, the Vaidya-Rauchaudhuri Endowment Award Lecture is held every year -- alternate years during the IAGRG meetings and between two IAGRG meetings at a venue decided at the IAGRG General Body Meeting. The Honorarium has also been revised from Rs 5000/- to Rs 10,000/- .
+		</p><p>
+			The first Vaidya-Raychaudhuri Endowment Award Lecture was delivered in the 15th IAGRG in 1989 and has been an integral part of the IAGRG meetings ever since.
+		</p><p>
+			The archival information is available here Archives of <a href='VR_list.html' >Vaidya-Raychaudhuri Lectures </a>.
+
+			<hr>
+		</p>
+	<h2 id="BestTheses"> V V Narlikar Best Thesis
 			Award </h2>
-		<h2 id="YoungResearcherAward">N R Sen Young Researcher Award</h2>
-		<h2 id="Publications">Publications</h2>
-		<h2 id="TopicalEvents">Topical Events</h2>
+	<hr>
+	<h2 id="YoungResearcherAward">N R Sen Young Researcher Award</h2>
+	<hr>
+	<h2 id="Publications">Publications</h2>
+	<hr>
+	<h2 id="TopicalEvents">Topical Events</h2>
 		
 		
 	
