updated 22 and 23 lecture details

--- a/VR_list.html
+++ b/VR_list.html
@@ -48,6 +48,24 @@
 							<th>Title<br> </th>
 						</tr>
 						<tr>
+							<td>23<br>
+							</td>
+							<td>October 26, 2023, Ashoka University <br>
+							</td>
+							<td>Varun Sahni<br>
+							</td>
+							<td>Title:Dark Matter, Dark Energy and the Cosmic Web <br>
+								</tr>
+						<tr>
+							<td>22<br>
+							</td>
+							<td>December 19, 2022, Department of Physical Sciences, Institute of Science Education and Research, Kolkata <br>
+							</td>
+							<td>Archana Pai<br>
+							</td>
+							<td>Title: Diversifying the net to fish the short duration massive black hole mergers<br>
+								</tr>
+						<tr>
 							<td>22<br>
 							</td>
 							<td>October 22, 2021, Department of Physical Sciences, Indian Institute of Science Education and Research, Mohali <br>
