some permission problem

--- a/activities.html
+++ b/activities.html
@@ -170,12 +170,20 @@
 			The first Vaidya-Raychaudhuri Endowment Award Lecture was delivered in the 15th IAGRG in 1989 and has been an integral part of the IAGRG meetings ever since.
 		</p><p>
 			The archival information is available here Archives of <a href='VR_list.html' >Vaidya-Raychaudhuri Lectures </a>.
-
+			
 			<hr>
 		</p>
 	<h2 id="BestTheses"> V V Narlikar Best Thesis
 			Award </h2>
-	<hr>
+		<p>
+			At the 20th General Body Meeting of IAGRG, held on Jan. 20, 1999 at D.D.U. Gorakhpur University, it was suggested to institute a prize of Rs. 1000/- , to be given every three years, for the best PhD thesis accepted by universities in India, in GR and related areas. This was followed up by the Council which decided to arrange special sessions for PhD thesis presentations, during the future IAGRG Conferences, inviting the recipients of PhD degrees in Mathematics/Physics from universities in India, for their thesis in GR, Gravitation and Related areas, in periods of four years blocks. It was decided that the best thesis, selected by a panel of referees on the basis of quality and presentation, be given Best Thesis Award. Later the Council accepted the suggestion of Prof. P.C. Vaidya and decided to designate this award as Professor V.V. Narlikar Award for Best Thesis in GRG and Related Areas to be given in blocks of four years with the first award to be given beginning with the block 1997-2000. Finally, at the 22nd General Body Meeting, it was decided to keep Rs. 50,000/- in fixed deposit for this purpose. The first award was actually given for the Block 1997-2000.
+		</p><p>
+			At the 27th IAGRG GBM, it was decided to award the V. V. Narlikar Best Thesis Prize at every IAGRG meeting. Furthermore, the Prize money is also increased to Rs. 5000/-.
+		</p><p>
+			At the 28th IAGRG FBM, it was decided that if the Best Thesis Award is shared, then each of the awardee will receive the same Prize money of Rs. 5000/-.
+
+			<hr>
+		</p>
 	<h2 id="YoungResearcherAward">N R Sen Young Researcher Award</h2>
 	<hr>
 	<h2 id="Publications">Publications</h2>
