file name error fixed

--- a/members.html
+++ b/members.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC >
+d fo<!DOCTYPE html PUBLIC >
 
 <html >
 <head>
@@ -55,7 +55,7 @@
 				</ol>
 				<h3>Procedure to become a member:</h3>
 				<p>
-				The application forms for membership are available as <a href="forms/application_form_2022.pdf" > PDF </a> and <a href="forms/application_form_2022.docx" > DOCX 
+				The application forms for membership are available as <a href="forms/application-form-2022.pdf" > PDF </a> and <a href="forms/application-form-2022.docx" > DOCX 
 					</a> files. </p>
 					<p>
 				Interested applicants are expected to e-mail the completed forms as a PDF file by e-mail to both the following addresses: iagrgcontact@gmail.com ​and​ iagrg.1969@gmail.com.</p>
